# web3insight-indexer

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
migrations/: 20250611103642_init.sql  20250626235738_init_actors_repos.sql  20250627011007_auto_update.sql  20250627030657_index.sql
src/: channel.rs  db.rs  helper.rs  main.rs
