[package]
name = "web3insights-dw"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "^1.1", features = ["zlib-rs"], default-features = false }
octocrab = { git = "https://github.com/vincent-forks/octocrab" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls-ring-webpki",
  "chrono",
  "time"
] }
dotenvy = { version = "^0.15" }
rust_decimal = "^1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
reqwest = { version = "0.12" }
dashmap = { version = "^6.1", features = ["serde"] }
async-channel = "2.3.1"
serde_path_to_error = "0.1"
